# nyc-bot

./: .clang-format  CMakeLists.txt  README.md  main.cpp
include/: bot-instance.h  command-about.h  command-announcement.h  command-ping.h  command.h  commands.h  slash-command.h
include/slash-commands/: about.h  announce.h  announcement.h  command-avatar.h  commands.h  ping.h  slash_command_registrar.h
src/: about.cpp  announce.cpp  announcement.cpp  bot-instance.cpp  bot-instance.h  command-about.h  command-announcement.h  command-ping.h  command.cpp  command.h  commands.h  main.cpp  ping.cpp  slash_command_registrar.cpp
src/slash-commands/: command-about.cpp  command-announcement.cpp  command-ping.cpp  command.cpp  slash-command.cpp
